[package]
name = "package-chain-gate"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "A gate for detecting supply-chain risks (malware, typosquatting, dependency confusion) in package dependencies."
license = "MIT"
readme = "README.md"
repository = ""
default-run = "package-chain-gate"

[dependencies]
bytes = "1.11.1"
clap = { version = "4.6.1", features = ["derive"] }
http-body-util = "0.1.3"
hyper = { version = "1.10.1", features = ["server", "http1"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "net", "macros", "time", "io-util"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[profile.release]
lto = "thin"
strip = true
